benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_iter2_error.log
=== Verification Error - Iteration 2 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes.rs
Time: 2025-09-15 19:27:34

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:27:39
   |
27 |   if exp == 0 { 1 } else { 2 * power2(exp - 1) }
   |                                ------ ^^^^^^^ expected `nat`, found `int`
   |                                |
   |                                arguments to this function are incorrect
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:24:9
   |
24 | spec fn power2(exp: nat) -> nat
   |         ^^^^^^ --------

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:51:10
   |
31 | exec fn str_to_nat(s: &[char]) -> nat
   |                                   --- expected `vstd::prelude::nat` because of return type
...
51 |   return res;
   |          ^^^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:60:11
   |
60 |   if n == 0 {
   |      -    ^ expected `nat`, found integer
   |      |
   |      expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:65:37
   |
65 |     let mut res = nat_to_binary(n / 2);
   |                                 -   ^ expected `nat`, found integer
   |                                 |
   |                                 expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:66:12
   |
66 |     if n % 2 == 0 {
   |        -   ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:66:17
   |
66 |     if n % 2 == 0 {
   |        -----    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0308`.

--------------------------------------------------------------------------------

Additional Output:
error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:27:39
   |
27 |   if exp == 0 { 1 } else { 2 * power2(exp - 1) }
   |                                ------ ^^^^^^^ expected `nat`, found `int`
   |                                |
   |                                arguments to this function are incorrect
   |
note: function defined here
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:24:9
   |
24 | spec fn power2(exp: nat) -> nat
   |         ^^^^^^ --------

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:51:10
   |
31 | exec fn str_to_nat(s: &[char]) -> nat
   |                                   --- expected `vstd::prelude::nat` because of return type
...
51 |   return res;
   |          ^^^ expected `nat`, found integer

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:60:11
   |
60 |   if n == 0 {
   |      -    ^ expected `nat`, found integer
   |      |
   |      expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:65:37
   |
65 |     let mut res = nat_to_binary(n / 2);
   |                                 -   ^ expected `nat`, found integer
   |                                 |
   |                                 expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:66:12
   |
66 |     if n % 2 == 0 {
   |        -   ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error[E0308]: mismatched types
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_ModExp_Add_DivMod_ModExpPow2_Zeroes_impl.rs:66:17
   |
66 |     if n % 2 == 0 {
   |        -----    ^ expected `nat`, found integer
   |        |
   |        expected because this is `vstd::prelude::nat`

error: aborting due to 6 previous errors

For more information about this error, try `rustc --explain E0308`.
